fluxcd/apps/base/send/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: send
  labels:
    enable-backup: "true"
