fluxcd/apps/base/send/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: send
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: send
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 1443
      protocol: TCP
